[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/object_armorAttack.gd" type="Script" id=1]
[ext_resource path="res://sprites/avengers/IronMan.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "anim"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 252 )

[node name="object_armorAttack" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
editor/display_folded = true
rotation = 1.5708
texture = ExtResource( 2 )
vframes = 3
hframes = 3
frame = 5

[node name="anim" type="AnimationPlayer" parent="sprite"]
autoplay = "anim"
anims/anim = SubResource( 1 )

[node name="explosions_area" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -420, 348 )

[node name="shape" type="CollisionShape2D" parent="explosions_area"]
shape = SubResource( 2 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="explosions_area" to="." method="_on_explosions_area_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
